--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,11 @@
       <version>0.4.0</version>
       <scope>compile</scope>
     </dependency>
+      <dependency>
+          <groupId>org.easytesting</groupId>
+          <artifactId>fest-swing-testng</artifactId>
+          <version>1.2.1</version>
+      </dependency>
   </dependencies>
 
   <build>
